--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>hr react attitude indicator demo</title>
+<link href="style.css" rel="stylesheet"></head>
+
 <body>
-  my page
-</body>
+	<div id='root'></div>
+
+<script type="text/javascript" src="main.js"></script></body>
+
 </html>
