--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>hr react attitude indicator demo</title>
+	<title>React Flight Attitude Indicator Demo</title>
 <link href="style.css" rel="stylesheet"></head>
 
 <body>
+	<a href="mailto:jialun.liu@outlook.com">Contract Me</a>
 	<div id='root'></div>
 
 <script type="text/javascript" src="main.js"></script></body>
